# truebearing

./: README.md  TODO.md  analysis.md  go.mod  go.sum
.claude/: CLAUDE.md
.github/workflows/: ci.yml  publish-node-sdk.yml  publish-python-sdk.yml  release.yml
Formula/: truebearing.rb
cmd/: init.go  init_test.go  main.go  serve.go  simulate.go  simulate_test.go
cmd/agent/: agent.go  list.go  list_test.go  register.go  revoke.go
cmd/audit/: audit.go  audit_test.go  export.go  query.go  replay.go  report.go  report_test.go  verify.go
cmd/escalation/: approve.go  escalation.go  list.go  reject.go
cmd/initpacks/: packs.go
cmd/policy/: diff.go  explain.go  lint.go  policy.go  policy_test.go  validate.go
cmd/session/: inspect.go  inspect_test.go  list.go  session.go  terminate.go
cmd/wasm/: core.go  main_js.go  main_wasi.go
docs/: demo-script.md  mvp-plan.md  policy-reference.md
docs/integrations/: langchain.md  langraph.md  openai.md
internal/audit/: audit_test.go  doc.go  record.go  sign.go  writer.go
internal/budget/: doc.go
internal/engine/: backend.go  budget.go  budget_test.go  content.go  content_test.go  delegation.go  delegation_test.go  doc.go  env.go  env_test.go  escalation.go  escalation_test.go  evaluator.go  integration_test.go  mayuse.go  mayuse_test.go  membackend.go  membackend_test.go  pipeline.go  pipeline_test.go  ratelimit.go  ratelimit_test.go  sequence.go  sequence_test.go  storebackend.go  taint.go  taint_test.go  types.go
internal/escalation/: doc.go  escalation.go  escalation_test.go  notify.go  notify_test.go
internal/identity/: doc.go  jwt.go  jwt_test.go  keypair.go  keypair_test.go
internal/policy/: doc.go  fingerprint.go  lint.go  lint_test.go  parser.go  parser_test.go  types.go
internal/proxy/: admin.go  admin_test.go  auth.go  auth_test.go  doc.go  health.go  health_test.go  logging_test.go  otel.go  otel_test.go  policy_cache.go  policy_cache_test.go  proxy.go  proxy_test.go  reload_test.go  session.go  session_test.go  stdio.go  stdio_test.go  trace.go  traceheaders.go  traceheaders_test.go
internal/session/: doc.go  session.go
internal/store/: agents.go  agents_test.go  audit.go  audit_test.go  doc.go  escalations.go  escalations_test.go  events.go  events_test.go  schema.go  sessions.go  sessions_test.go  store.go  store_test.go  testing.go
pkg/audit/: doc.go  types.go
pkg/mcpparse/: doc.go  parse.go  parse_fuzz_test.go  parse_test.go  types.go
policy-packs/devops/: README.md  production-guard.policy.yaml
policy-packs/fintech/: README.md
policy-packs/healthcare/: README.md  (+1 more)
policy-packs/healthcare-billing/: README.md  hipaa-billing-guard.policy.yaml
scripts/: install.sh
sdks/python/: pyproject.toml
sdks/python/src/truebearing/: __init__.py  _proxy.py
sdks/python/tests/: test_proxy.py
testdata/: minimal.policy.yaml
(+22 files in other folders)
