[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truebearing"
version = "0.1.0"
description = "Python SDK for the TrueBearing transparent MCP proxy"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = ["mcp", "proxy", "ai", "agent", "policy", "truebearing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
]
# No runtime dependencies: only stdlib (os, socket, subprocess, time,
# urllib, uuid, pathlib). anthropic/openai SDKs are optional — detected
# at runtime via try/import. This keeps the package lightweight and avoids
# pinning SDK versions.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
openai = [
  "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mercator-hq/truebearing"
Source = "https://github.com/mercator-hq/truebearing"
Issues = "https://github.com/mercator-hq/truebearing/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/truebearing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
